# znc-msvc

branches/znc-extra-official/: .gitignore  blockuser.cpp  configure  lastseen.cpp
branches/znc-official-svn/: AUTHORS  Buffer.cpp  Buffer.h  Chan.cpp  Client.cpp  Client.h  ClientCommand.cpp  Csocket.cpp  Csocket.h  DCCBounce.cpp  DCCSock.cpp  DCCSock.h  FileUtils.cpp  FileUtils.h  HTTPSock.cpp  IRCSock.cpp  IRCSock.h  Makefile.in  Modules.cpp  Modules.h  Nick.cpp  Template.cpp  Template.h  Timers.h  User.cpp  User.h  Utils.cpp  Utils.h  ZNCString.cpp  ZNCString.h  configure.in  main.cpp  main.h  znc.conf  znc.cpp  znc.h
branches/znc-official-svn/modules/: Makefile.in  autoattach.cpp  (+13 more)
flakes/: fix_lagchk.cpp  fix_relay_bot.cpp  infobot.cpp  minus-umodes.patch  nodcc_global.cpp  noreconnectonkill.cpp  prowl.cpp  startdisconnected.cpp  twitter.cpp
javascript/: configure.in  znc-js-not-really-docs.txt
javascript/project/: znc_js_mod.sln  znc_js_mod.vcproj
javascript/src/: util.cpp  znc_js_mod.cpp  znc_js_mod.h  znc_js_mod_events.cpp  znc_js_mod_events.inc  znc_script.cpp  znc_script.h  znc_script_chan.cpp  znc_script_funcs.cpp  znc_script_funcs.h  znc_script_global.cpp  znc_script_nick.cpp  znc_script_timer.cpp  znc_script_user.cpp  znc_smjs.h
main/: Ignore-rogue-DNS-servers-reported-by-windows.patch  make-release.cmd
main/release/: ZNC Project Home Page.url
main/znc-msvc/: AUTHORS  Buffer.cpp  Buffer.h  Chan.cpp  Chan.h  Client.cpp  Client.h  ClientCommand.cpp  Csocket.cpp  Csocket.h  DCCBounce.cpp  DCCBounce.h  DCCSock.cpp  DCCSock.h  FileUtils.cpp  FileUtils.h  HTTPSock.cpp  HTTPSock.h  IRCSock.cpp  IRCSock.h  Listener.cpp  Listener.h  MD5.h  Makefile.in  Modules.cpp  Modules.h  Nick.cpp  Server.cpp  Socket.cpp  Socket.h  Template.cpp  Template.h  User.cpp  User.h  Utils.cpp  Utils.h  WebModules.cpp  WebModules.h  ZNCString.cpp  ZNCString.h  (+12 more)
modskype/: SkypeLink.hpp  SkypeProtocol.cpp  modskype.cpp  utils.cpp
other-modules/: block_lagchk.cpp  block_motd.cpp  certauth.cpp  control.cpp  dns.cpp  fish.cpp  flooddetach.cpp  highlightattach.cpp  notify.cpp  prowl.cpp  qauth.cpp  rawlog.cpp  uptime.cpp
psychon-modules/: block_lagchk.cpp  block_motd.cpp  fish.cpp
release/: License_MsIntTypes.txt  License_OpenSSL.txt  License_c-ares.txt
tags/znc-0.080/: make-release.cmd
tags/znc-0.097-r2182/: make-release.cmd
tags/znc-0.098/: make-release.cmd
tags/znc-0.202r2/: make-release.cmd
trunk/flakes/: fix_lagchk.cpp  infobot.cpp  minus-umodes.patch  nodcc_global.cpp  nodcc_user.cpp  prowl.cpp  twitter.cpp
trunk/javascript/: configure  configure.in  znc-js-not-really-docs.txt
trunk/javascript/project/: znc_js_mod.vcproj
trunk/javascript/src/: gutf8.c  iconv_string.c  util.cpp  util.h  znc_js_mod.cpp  znc_js_mod.h  znc_js_mod_events.cpp  znc_js_mod_events.h  znc_js_mod_events.inc  znc_js_watchdog.cpp  znc_js_watchdog.h  znc_script.cpp  znc_script.h  znc_script_funcs.cpp  znc_script_funcs.h  znc_script_global.cpp  znc_script_nick.cpp  znc_script_timer.h  znc_script_user.cpp
trunk/main/: make-release.cmd
trunk/modskype/: SkypeLink.hpp  SkypeMessaging.cpp  SkypeProtocol.cpp  modskype.hpp  utils.cpp
trunk/other-modules/: certauth.cpp  notify.cpp  rawlog.cpp
trunk/psychon-modules/: certchecker.cpp  control.cpp  ctcpflood.cpp  noctcp.cpp
trunk/testing/: readme.txt
trunk/znc-extra-msvc/: AUTHORS  Makefile.in  adminlog.cpp  autovoice.cpp  configure.in  fixfreenode.cpp  log.cpp
trunk/znc-extra-msvc/webadmin/skins/default.de/: Header.tmpl  UserPage.tmpl
trunk/znc-extra-msvc/webadmin/skins/graphiX.de/: Settings.tmpl
trunk/znc-extra-msvc/webadmin/skins/ice.de/css/: main.css
trunk/znc-msvc/: Buffer.cpp  Buffer.h  Client.cpp  Client.h  ClientCommand.cpp  Csocket.cpp  Csocket.h  DCCBounce.cpp  DCCSock.cpp  FileUtils.cpp  FileUtils.h  HTTPSock.cpp  HTTPSock.h  IRCSock.cpp  IRCSock.h  MD5.cpp  Makefile.in  Modules.cpp  Modules.h  Nick.h  Server.h  Socket.cpp  Template.cpp  Template.h  User.cpp  User.h  Utils.cpp  Utils.h  ZNCString.cpp  ZNCString.h  configure.in  main.cpp  main.h  revision.h  znc.cpp  znc.h
wiki/: BuildingZNC.wiki  Changelog.wiki  DownloadPage.wiki  IncludedModules.wiki  Migration0206.wiki  ModSkypeSetup.wiki  ServiceSetup.wiki  ServiceSetupLegacy.wiki  StarterGuide.wiki  WikiStart.wiki
znc-extra-msvc/: Makefile.in  adminlog.cpp  lastseen.cpp  log.cpp  modtcl.cpp  modtcl.tcl  route_replies.cpp
znc-msvc/: AUTHORS  Buffer.cpp  Buffer.h  Chan.cpp  Chan.h  Client.cpp  Client.h  ClientCommand.cpp  Csocket.cpp  Csocket.h  DCCBounce.cpp  DCCBounce.h  DCCSock.cpp  DCCSock.h  FileUtils.cpp  FileUtils.h  HTTPSock.cpp  HTTPSock.h  IRCSock.cpp  IRCSock.h  LICENSE.OpenSSL  Listener.cpp  MD5.cpp  MD5.h  Makefile.in  Modules.cpp  Modules.h  Nick.cpp  Nick.h  Server.cpp  Server.h  Socket.cpp  Socket.h  Template.cpp  Template.h  Timers.h  User.cpp  User.h  Utils.cpp  Utils.h  (+15 more)
znc-msvc/modules/: Makefile.in  admin.cpp  adminlog.cpp  autoattach.cpp  autocycle.cpp  autoop.cpp  autoreply.cpp  away.cpp  awaynick.cpp  blockuser.cpp  buffextras.cpp  build-modules.cmd  certauth.cpp  chansaver.cpp  clientnotify.cpp  colloquy.cpp  crypt.cpp  disconkick.cpp  dns.cpp  fail2ban.cpp  fakeonline.cpp  fixfreenode.cpp  imapauth.cpp  keepnick.cpp  kickrejoin.cpp  lastseen.cpp  modperl.pm  nickserv.cpp  noctcp.cpp  notes.cpp  partyline.cpp  perform.cpp  prowl.cpp  q.cpp  qauth.cpp  raw.cpp  route_replies.cpp  saslauth.cpp  savebuff.cpp  schat.cpp  (+6 more)
(+646 files in other folders)
